# RooDataSetClassLoopFilesCmakeITMonly

./: CMakeLists.txt  README  test.sh
include/: MLRooDataStore.h  MLRooDataStore.h~  MLWCSHandler.h  singlefile.h
src/: MLRooDataStore.cxx  MLRooDataStore.cxx~  MLWCSHandler.cpp  main.cpp  singlefile.cpp
